<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10dip"
    android:stretchColumns="true" >
    
     <TableRow android:id="@+id/TableRow01"
               android:layout_gravity="center_horizontal"
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:padding="10dip"
               android:layout_weight="1">
          <Button
            android:id="@+id/search_button"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/cvs_search"
            android:drawableLeft="@drawable/download"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dip"
            android:contentDescription="@string/cvs_search" />
     
          <Button
            android:id="@+id/stats_button"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/cvs_stats"
            android:drawableLeft="@drawable/stats"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dip"
            android:contentDescription="@string/cvs_stats"/>
     </TableRow>
     
     <TableRow android:id="@+id/TableRow02"
               android:layout_gravity="center_horizontal"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
               android:padding="10dip"
               android:layout_weight="1" >
     
         <Button
            android:id="@+id/profiles_button"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/cvs_profiles"
            android:drawableLeft="@drawable/user"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dip"
            android:contentDescription="@string/cvs_profiles"/>
     
         <Button
            android:id="@+id/feeds_button"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/cvs_feeds"
            android:drawableLeft="@drawable/rss"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dip"
            android:contentDescription="@string/cvs_feeds"/>
     </TableRow>
 
</TableLayout>

