<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content" 
  android:orientation="vertical">

  <LinearLayout
  	android:layout_width="fill_parent"
	  android:layout_height="wrap_content"
	  android:orientation="horizontal"
	  android:paddingLeft="10dip" android:paddingRight="10dip" android:paddingTop="10dip" >

	  <TextView android:text="@string/published_date"
	  	android:textStyle="bold"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content" />

	  <TextView android:id="@+id/cve_published_date"
	    android:layout_width="0dip"
	    android:layout_height="wrap_content"
	    android:layout_weight="1"
      android:gravity="right" />

	</LinearLayout>

  <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingLeft="10dip" android:paddingRight="10dip" >

    <TextView android:text="@string/modified_date"
    	android:textStyle="bold"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content" />

    <TextView android:id="@+id/cve_modified_date"
      android:layout_width="0dip"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:gravity="right" />
  </LinearLayout>

  <TextView android:text="@string/summary"
    android:textStyle="bold"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="10dip" android:paddingRight="10dip" />

  <TextView android:id="@+id/cve_summary"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="10dip" android:paddingRight="10dip" />

  <View android:layout_width="wrap_content"
        android:background="@drawable/gradient"
        android:layout_height="1dp"
        android:layout_marginTop="10dip" android:layout_marginBottom="10dip" />

  <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:paddingLeft="10dip" android:paddingRight="10dip" >

    <TextView android:text="@string/vulnerability_score"
      android:textStyle="bold"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content" />

    <RatingBar android:id="@+id/vulnerability_score"
               android:layout_width="0dip"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:gravity="right"
               style="@style/VulnerabilityScoreBar"
               android:isIndicator="true"
               android:progressDrawable="@drawable/vulnerability_score_bar"
               android:numStars="5"
               android:stepSize="0.5"
               android:scaleX="0.75"
               android:scaleY="0.75" />
  </LinearLayout>

  <TextView android:text="@string/vulnerability_score_details"
    android:textStyle="bold"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="10dip" android:paddingRight="10dip" />

  <TextView android:id="@+id/vulnerability_score_details"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="10dip" android:paddingRight="10dip" />

  <View android:layout_width="wrap_content"
      android:background="@drawable/gradient"
      android:layout_height="1dp"
      android:layout_marginTop="10dip" android:layout_marginBottom="10dip" />

</LinearLayout>